--- a/HDTraceWritingCLibrary/Makefile.am
+++ b/HDTraceWritingCLibrary/Makefile.am
@@ -8,9 +8,12 @@ include_HEADERS = $(INC_DIR)/hd*.h
 
 doc: devdoc apidoc
 
+doxyINPUT = $(SRC_DIR) $(INC_DIR) include
+
 devdoc: force
-	OUTDIR=$(DOC_DIR) doxygen $(top_srcdir)/Doxyfile
+	OUTDIR=$(DOC_DIR) INPUT="$(doxyINPUT)" doxygen $(top_srcdir)/Doxyfile
 
 apidoc: force
 	mkdir -p $(DOC_DIR)/api
-	OUTDIR=$(DOC_DIR)/api doxygen $(top_srcdir)/Doxyfile
+	OUTDIR=$(DOC_DIR)/api INPUT="$(doxyINPUT)" doxygen $(top_srcdir)/Doxyfile.api_only
+
