--- a/HDTraceWritingCLibrary/tools/Makefile.am
+++ b/HDTraceWritingCLibrary/tools/Makefile.am
@@ -9,7 +9,8 @@ hdStatsPrint_CFLAGS = -I$(INC_DIR)
 # Run configurations #
 ######################
 
-STATS_EXAMPLE=../../PerformanceTracingLibrary/examples/MyProject_host0_Performance.stat
+STATS_EXAMPLE=$(top_srcdir)/../PerformanceTracingLibrary/build/examples/MyProject_host0_Performance.stat
+HEADER_READER=$(top_srcdir)/tools/hdStatsReadHeader.pl
 
-run_hdStatsPrint: hdStatsPrint hdStatsReadHeader.pl
-	./hdStatsPrint $(shell ./hdStatsReadHeader.pl $(STATS_EXAMPLE))
+run_hdStatsPrint: hdStatsPrint ${HEADER_READER}
+	./hdStatsPrint $(shell ${HEADER_READER} $(STATS_EXAMPLE))
