--- a/PVFS2/2.8.1/src/common/misc/module.mk.in
+++ b/PVFS2/2.8.1/src/common/misc/module.mk.in
@@ -12,6 +12,7 @@ LIBSRC += $(DIR)/server-config.c \
 	  $(DIR)/pint-perf-counter.c \
 	  $(DIR)/pint-event.c \
 	  $(DIR)/pint-event-hd.c \
+	  $(DIR)/pint-event-hd-client.c \
 	  $(DIR)/pint-cached-config.c \
 	  $(DIR)/pint-util.c \
 	  $(DIR)/msgpairarray.c \
