--- a/HDMPIwrapper/Makefile.in
+++ b/HDMPIwrapper/Makefile.in
@@ -20,7 +20,7 @@ LDFLAGS += @LDFLAGS@
 #CFLAGS  += -Wall -Wextra -pedantic -std=gnu99 -ggdb  -I$(MPINC) -I../HDTraceWritingCLibrary/include  -Iinclude/ $(shell pkg-config --cflags glib-2.0)  `getconf LFS_CFLAGS` -D HDTRACE_INCLUDE_NESTED_TEST
 #LDFLAGS += $(shell pkg-config --libs glib-2.0)
 
-.PHONY: all
+.PHONY: all install clean dist-clean
 all: lib/libhdTraceMPIWrapper.a
 
 lib/libhdTraceMPIWrapper.a: src/hdTraceMPIWrapper.o
