Added libs to all compilers.

--- a/MPICH2/mpich2-1.0.8p1/src/env/mpicxx.in
+++ b/MPICH2/mpich2-1.0.8p1/src/env/mpicxx.in
@@ -253,7 +253,7 @@ if [ "$linking" = yes ] ; then
         # Prepend the path for the shared libraries to the library list
         shllibpath="$CXX_LINKPATH_SHL$libdir"
     fi
-    $Show $CXX $CXXFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $shllibpath $cxxlibs $mpilibs $MPI_OTHERLIBS
+    $Show $CXX $CXXFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $shllibpath $cxxlibs $mpilibs $MPI_OTHERLIBS $mpilibs $MPI_OTHERLIBS $mpilibs
     rc=$?
 else
     $Show $CXX $CXXFLAGS $allargs -I$includedir
