--- a/MPICH2/mpich2-1.0.8p1/src/env/mpicc.in
+++ b/MPICH2/mpich2-1.0.8p1/src/env/mpicc.in
@@ -253,7 +253,7 @@ if [ "$linking" = yes ] ; then
 	# prepend the path for the shared libraries to the library list
 	mpilibs="$C_LINKPATH_SHL$libdir $mpilibs"
     fi
-    $Show $CC $CFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $mpilibs $mpilibs $MPI_OTHERLIBS $mpilibs
+    $Show $CC $CFLAGS $LDFLAGS $allargs -I$includedir -L$libdir $mpilibs $MPI_OTHERLIBS $mpilibs $MPI_OTHERLIBS $mpilibs
     rc=$?
 else
     $Show $CC $CFLAGS $allargs -I$includedir
