--- a/PIOsimHD-Simulator/.classpath
+++ b/PIOsimHD-Simulator/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/PIOsimHD-Model"/>
 	<classpathentry kind="lib" path="lib/TAU_tf.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HDTraceFormat"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
