* Fixed small bug (group gets topo node level now) * Reworked source file structure

--- a/PowerTracer/src/Makefile.am
+++ b/PowerTracer/src/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/common.am
 
 bin_PROGRAMS = pt
 
-pt_SOURCES = pt.c LMG.c serial.c
+pt_SOURCES = pt.c conf.c trace.c LMG.c serial.c 
 pt_CFLAGS = $(HDTWLIB_CFLAGS)
 pt_LDADD = $(HDTWLIB_LDADD)
 pt_LDFLAGS = $(HDTWLIB_LDFLAGS) $(HDTWLIB_LIBS)
