--- a/PowerTracer/configure.ac
+++ b/PowerTracer/configure.ac
@@ -11,6 +11,9 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign 1.10])
 
 # Checks for programs.
 AC_PROG_CC_C99
+AC_PROG_INSTALL
+AC_PROG_AWK
+AC_PROG_MKDIR_P
 
 AC_USE_SYSTEM_EXTENSIONS
 
@@ -114,18 +117,21 @@ dnl ------------------------------------------------------------------------
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h string.h sys/time.h termios.h unistd.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h stdlib.h string.h sys/time.h termios.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
+AC_HEADER_STDBOOL
 AC_TYPE_UINT32_T
 
 # Checks for library functions.
+AC_FUNC_MALLOC
+AC_FUNC_REALLOC
 AC_FUNC_SELECT_ARGTYPES
-AC_CHECK_FUNCS([gettimeofday select])
+AC_CHECK_FUNCS([gettimeofday regcomp select strerror])
 
 AC_CONFIG_FILES([Makefile
-		 src/Makefile])
+                 src/Makefile])
 AC_OUTPUT
